change collector for toList method