@@ -221,10 +221,10 @@ public class BySkillPointsMixer extends BasicPlayersMixer {
             List<Player> team1Players = teams.get(0).getTeamPlayers().get(position);
             List<Player> team2Players = teams.get(1).getTeamPlayers().get(position);
 
-            for (Player playerTeam1 : team1Players.stream().filter(player -> !player.isAnchored()).collect(Collectors.toList())) {
+            for (Player playerTeam1 : team1Players.stream().filter(player -> !player.isAnchored()).toList()) {
                 int playerTeam1Index = team1Players.indexOf(playerTeam1);
 
-                for (Player playerTeam2 : team2Players.stream().filter(player -> !player.isAnchored()).collect(Collectors.toList())) {
+                for (Player playerTeam2 : team2Players.stream().filter(player -> !player.isAnchored()).toList()) {
                     int playerTeam2Index = team2Players.indexOf(playerTeam2);
 
                     team1Players.set(playerTeam1Index, playerTeam2);
